# fde-data-forge

./: .env.example  .gitignore  CONTRIBUTING.md  Makefile  QUIRKS.md  README.md  pyproject.toml  requirements.txt  run.bat
.github/workflows/: ci.yml
demo/: demo.tape
fde/: __init__.py  cli.py
fde/detect/: __init__.py  dates.py  part_numbers.py  states.py  suppliers.py
fde/ingest/: __init__.py  change_orders.py  parts.py  suppliers.py
fde/normalize/: __init__.py  part_numbers.py  states.py  suppliers.py
fde/report/: __init__.py  builder.py
fde/validate/: __init__.py  manifest.py
samples/: PROVENANCE.md  change_orders.xlsx  mess_manifest_sample.json  parts_v1.csv  parts_v2.csv  suppliers_legacy.csv
tests/: test_detect.py  test_ingest.py  test_normalize.py  test_validate.py  test_version.py
