[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "fde-data-forge"
version = "1.0.0"
requires-python = ">=3.12"
dependencies = [
    "pandas>=2.2,<3",
    "openpyxl>=3.1,<4",
    "chardet>=5.2,<6",
    "rapidfuzz>=3.9,<4",
    "click>=8.1,<9",
    "rich>=13.7,<14",
]

[project.scripts]
fde = "fde.cli:cli"

[tool.setuptools.packages.find]
where = ["."]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "W", "F", "I", "UP"]
ignore = ["E501"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
